--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="CalculatorApp.App"
+<Application x:Class="CalculatorApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:Controls="using:CalculatorApp.Controls"
@@ -1418,9 +1418,8 @@
             </Style>
 
             <Style x:Key="OverflowFlyoutStyle" TargetType="FlyoutPresenter">
-                <Setter Property="MinWidth" Value="256"/>
-                <Setter Property="MinHeight" Value="96"/>
                 <Setter Property="Padding" Value="0"/>
+                <Setter Property="Margin" Value="0,-3,0,0"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="FlyoutPresenter">
@@ -1469,9 +1468,9 @@
                 <Setter Property="ItemsPanel">
                     <Setter.Value>
                         <ItemsPanelTemplate>
-                            <StackPanel Height="Auto"
-                                        VerticalAlignment="Stretch"
-                                        Orientation="Horizontal"/>
+                            <ItemsStackPanel Height="Auto"
+                                             VerticalAlignment="Stretch"
+                                             Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                     </Setter.Value>
                 </Setter>
@@ -1480,6 +1479,7 @@
                         <Style TargetType="ListViewItem">
                             <Setter Property="MinHeight" Value="0"/>
                             <Setter Property="Padding" Value="0"/>
+                            <Setter Property="IsTabStop" Value="False"/>
                             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
                         </Style>
