--- a/src/Calculator/Views/CalculatorStandardOperators.xaml
+++ b/src/Calculator/Views/CalculatorStandardOperators.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CalculatorApp.CalculatorStandardOperators"
+<UserControl x:Class="CalculatorApp.CalculatorStandardOperators"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:common="using:CalculatorApp.Common"
@@ -252,28 +252,28 @@
             <controls:CalculatorButton x:Name="divideButton"
                                        x:Uid="divideButton"
                                        Grid.Row="0"
-                                       Style="{StaticResource AccentCalcButtonStyle}"
+                                       Style="{StaticResource SymbolOperatorButtonStyle}"
                                        AutomationProperties.AutomationId="divideButton"
                                        ButtonId="Divide"
                                        Content="&#xE94A;"/>
             <controls:CalculatorButton x:Name="multiplyButton"
                                        x:Uid="multiplyButton"
                                        Grid.Row="1"
-                                       Style="{StaticResource AccentCalcButtonStyle}"
+                                       Style="{StaticResource SymbolOperatorButtonStyle}"
                                        AutomationProperties.AutomationId="multiplyButton"
                                        ButtonId="Multiply"
                                        Content="&#xE947;"/>
             <controls:CalculatorButton x:Name="minusButton"
                                        x:Uid="minusButton"
                                        Grid.Row="2"
-                                       Style="{StaticResource AccentCalcButtonStyle}"
+                                       Style="{StaticResource SymbolOperatorButtonStyle}"
                                        AutomationProperties.AutomationId="minusButton"
                                        ButtonId="Subtract"
                                        Content="&#xE949;"/>
             <controls:CalculatorButton x:Name="plusButton"
                                        x:Uid="plusButton"
                                        Grid.Row="3"
-                                       Style="{StaticResource AccentCalcButtonStyle}"
+                                       Style="{StaticResource SymbolOperatorButtonStyle}"
                                        AutomationProperties.AutomationId="plusButton"
                                        ButtonId="Add"
                                        Content="&#xE948;"/>
@@ -299,7 +299,7 @@
                                    x:Uid="negateButton"
                                    Grid.Row="5"
                                    Grid.Column="2"
-                                   Style="{StaticResource SymbolOperatorButtonStyle}"
+                                   Style="{StaticResource SymbolOperatorKeypadButtonStyle}"
                                    AutomationProperties.AutomationId="negateButton"
                                    ButtonId="Negate"
                                    Content="&#xE94D;"/>
